--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,51 +1,114 @@
 /* nav related style */
-nav{
+nav {
     display: flex;
-     justify-content: space-between; 
+    justify-content: space-between;
     align-items: center;
+    margin: 0  200px;
 }
+
 /* common shared styles  */
-body{
-    font-family: 'Lato',sans-serif;
-    font-family: 'Open Sans',sans-serif;
+body {
+    font-family: 'Lato', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
-.nav-title{
+
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size:18px ;
+}
+.nav-title {
     color: #181818;
 
     font-size: 45px;
     font-style: normal;
     font-style: 800;
-    
+
 
 
 }
-.text-primary{
-    color:#FD6E0A
+
+.text-primary {
+    color: #FD6E0A
 }
 
-nav > ul{
+nav>ul {
     display: flex;
     align-items: center;
 }
-nav li{
+
+nav li {
     list-style: none;
     margin-right: 50px;
-    
+
 }
 
-nav a{
+nav a {
     text-decoration: none;
     color: #474747;
 }
 
 .btn-primary {
- 
-   border-radius: 5px;
-   background: #FD6E0A;
-   border: 0;
-   color: white;
-   font-size: 20px;
-   font-weight: 700;
-   padding: 15px 35px;
 
+    border-radius: 5px;
+    background: #FD6E0A;
+    border: 0;
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 15px 35px;
+
+}
+/* header related style */
+.header{
+    background-color:#FFF8F5;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+
+}
+
+.banner{
+    padding: 30px  30px 0px 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.banner-content{
+    max-width: 500px;
+}
+ .banner .profile{
+    width: 500px;
+}
+
+.banner-greeting{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+.banner-title{
+    font-size: 85px;
+    font-style: normal;
+    font-weight:700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+.banner-discription{
+
+}
+/* main section styles */
+
+/* about section styles */
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
 }
