--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -104,6 +104,10 @@ nav a {
 
 }
 /* main section styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
 /* about section styles */
 .about{
@@ -111,4 +115,9 @@ nav a {
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 0;
+}
+/* here about footer  */
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
 }
