--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -108,6 +108,9 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+}
 
 /* about section styles */
 .about{
@@ -124,6 +127,48 @@ main{
 .about-info{
     text-align: center                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        ;
 }
+/* skills related style */
+
+
+
+.skills-continer{
+display: flex;
+gap:24px
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    
+}
+.skill-description{
+    color: #757575;
+}
+
 #what-i-do-descreption{
     padding: 30px 150px;
+}
+
+/* Resume Section Styles */
+.resume-column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+.resume-container{
+    display: flex;
+    gap:50px;
+
+}
+.resume-item-descreption{
+    color: #757575;
+}
+.resume-item-institute{
+    color: #757575;
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
 }
