--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -151,12 +151,31 @@ gap:24px
 }
 
 /* Resume Section Styles */
-.resume-column-title{
-    color: #474747;
-    font-size: 30px;
-    font-weight: 700;
-}
-.resume-continer{
+.resume-content{
     display: flex;
-    gap: 50px;
+    gap: 24px;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume .title{
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.resume .sub-title{
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.resume .description{
+    color: #757575;
+}
+
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
 }
