--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -198,8 +198,25 @@ main section {
 /* footer section */
 footer{
     display: flex;
+    gap: 100px;
     margin-top: 100px;
     background: #FFF8F3;
     padding: 130px 200px;
+}
+.footer-column{
+    width: 50%;
+}
+.social-links a{
+   margin-right: 25px;
+}
+.contact input[type="text"],.contact [type="email"], textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 30px;
+    color: #757575;
+    border-radius: 5px;
+    background-color: #FFF;
+    border: 0;
+    width: 100%;
 }
 
